// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`betterer > should work with a .betterer.ts file 1`] = `
[
  "🌟 Betterer (0ms):
",
  "🌟 Betterer (0ms): 1 test running...
🤔 test: running "test"!
",
  "🌟 Betterer (0ms): 1 test running...
✅ test: "test" got checked for the first time! 🎉
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: "test" got checked for the first time! 🎉
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: "test" got checked for the first time! 🎉

1 test got checked. 🤔
1 test got checked for the first time! 🎉
",
  "🌟 Betterer (0ms):
",
  "🌟 Betterer (0ms): 1 test running...
🤔 test: running "test"!
",
  "🌟 Betterer (0ms): 1 test running...
✅ test: "test" got better! 😍
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: "test" got better! 😍
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: "test" got better! 😍

1 test got checked. 🤔
1 test got better! 😍
",
]
`;

exports[`betterer > should work with a .betterer.ts file 2`] = `
"// BETTERER RESULTS V2.
//
// If this file contains merge conflicts, use \`betterer merge\` to automatically resolve them:
// https://phenomnomnominal.github.io/betterer/docs/results-file/#merge
//
exports[\`test\`] = {
  value: \`2
\`
};
"
`;

exports[`betterer should work with a .betterer.ts file 1`] = `
Array [
  "🌟 Betterer (0ms):
",
  "🌟 Betterer (0ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (0ms): 1 test running...
✅ test: \\"test\\" got checked for the first time! 🎉
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: \\"test\\" got checked for the first time! 🎉
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: \\"test\\" got checked for the first time! 🎉

1 test got checked. 🤔
1 test got checked for the first time! 🎉
",
  "🌟 Betterer (0ms):
",
  "🌟 Betterer (0ms): 1 test running...
🤔 test: running \\"test\\"!
",
  "🌟 Betterer (0ms): 1 test running...
✅ test: \\"test\\" got better! 😍
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: \\"test\\" got better! 😍
",
  "🎉 Betterer (0ms): 1 test done!
✅ test: \\"test\\" got better! 😍

1 test got checked. 🤔
1 test got better! 😍
",
]
`;

exports[`betterer should work with a .betterer.ts file 2`] = `
"// BETTERER RESULTS V2.
//
// If this file contains merge conflicts, use \`betterer merge\` to automatically resolve them:
// https://phenomnomnominal.github.io/betterer/docs/results-file/#merge
//
exports[\`test\`] = {
  value: \`2
\`
};
"
`;
